# hikcloudstream

./: .env.example  .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: MAINTAINER_BLUEPRINT.md  architecture.md  limitations.md  publishing.md  quickstart.md  streaming.md
examples/: cloud_snapshot.py  list_cameras.py  live_frame.py  mjpeg_proxy.py  record_clip.py
src/hikcloudstream/: __init__.py  _config.py  auth.py  capture.py  client.py  exceptions.py  models.py
src/hikcloudstream/cli/: __init__.py  _common.py  snapshot.py  stream.py
src/hikcloudstream/stream/: __init__.py  adapter.py  crypto.py  probe.py  rtp.py  session.py  tokens.py
src/hikcloudstream/stream/sinks/: __init__.py  annex_b.py  hls.py  http.py  mjpeg.py  mpegts.py
tests/unit/: test_crypto.py  test_hls.py  test_probe.py  test_rtp.py
