[project]
name = "hikcloudstream"
version = "0.1.1"
description = "Unofficial Python SDK for Hik-Connect cloud cameras: list devices, snapshots, and live VTM streaming"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Cristiano Miranda" }]
keywords = [
    "hikvision",
    "hik-connect",
    "ezviz",
    "camera",
    "streaming",
    "vtm",
    "cloud",
    "cctv",
    "nvr",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: System :: Networking",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.0",
    "pycryptodome>=3.21.0",
    "pyezvizapi>=1.0.4.5",
]

[project.optional-dependencies]
cli = ["pillow>=11.0.0"]
viewer = ["pillow>=11.0.0", "av>=17.1.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pillow>=11.0.0",
    "av>=17.1.0",
]

[project.scripts]
hikcloudstream-snapshot = "hikcloudstream.cli.snapshot:main"
hikcloudstream-stream = "hikcloudstream.cli.stream:main"

[project.urls]
Homepage = "https://github.com/cristianojmiranda/hikcloudstream"
Documentation = "https://github.com/cristianojmiranda/hikcloudstream#readme"
Repository = "https://github.com/cristianojmiranda/hikcloudstream"
Issues = "https://github.com/cristianojmiranda/hikcloudstream/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hikcloudstream"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "integration: live API tests (requires HIK_CONNECT_USER env)",
]
